<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        mapbox:mapbox_cameraZoom="15"/>
    <LinearLayout
        android:id="@+id/location_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/selected_location_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@color/black_blue_low_opacity"
            android:text="@string/loc_picker_location_info"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_select_location"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="5dp"
            android:background="@color/blue_light"
            android:text="@string/btn_selectLocation"
            android:textColor="@android:color/white"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_continue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_blue"
            android:text="@string/btn_continue"
            android:enabled="false"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</FrameLayout>