<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/white">
    <LinearLayout
        android:id="@+id/work_hours_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        android:paddingHorizontal="10dp"
        android:background="@color/blue_light"
        android:weightSum="1">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_clock_hour"
            android:layout_weight="0.1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workhours_title"
            android:textColor="@color/text_light"
            android:textSize="20sp"
            android:fontFamily="@font/auttera"
            android:layout_weight="0.8"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/work_hours_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/work_hours_header"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding = "15dp">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/days_of_the_week_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <com.google.android.material.chip.Chip
            android:id="@+id/chipDay_monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-thin"
            app:checkedIconTint="@color/text_light"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:textSize="15sp"
            android:textStyle="bold"
            style="@style/DayChip"
            android:text="@string/monday"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chipDay_tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-thin"
            app:checkedIconTint="@color/text_light"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:textSize="15sp"
            android:textStyle="bold"
            style="@style/DayChip"
            android:text="@string/tuesday"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chipDay_wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-thin"
            app:checkedIconTint="@color/text_light"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:textSize="15sp"
            android:textStyle="bold"
            style="@style/DayChip"
            android:text="@string/wednesday"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chipDay_thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-thin"
            app:checkedIconTint="@color/text_light"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:textSize="15sp"
            android:textStyle="bold"
            style="@style/DayChip"
            android:text="@string/thursday"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chipDay_friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-thin"
            app:checkedIconTint="@color/text_light"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:textSize="15sp"
            android:textStyle="bold"
            style="@style/DayChip"
            android:text="@string/friday"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chipDay_saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-thin"
            app:checkedIconTint="@color/text_light"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:textSize="15sp"
            android:textStyle="bold"
            style="@style/DayChip"
            android:text="@string/saturday"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chipDay_sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-thin"
            app:checkedIconTint="@color/text_light"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:textSize="15sp"
            android:textStyle="bold"
            style="@style/DayChip"
            android:text="@string/sunday"/>
        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment_name_places"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="25dp"
            app:dividerColor="@color/blue_dark"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/checkbox_closed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_blue"
                android:padding="2dp"
                android:layout_marginHorizontal="5dp"
                android:text="@string/closed"/>
            <CheckBox
                android:id="@+id/checkbox_open24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_blue"
                android:padding="2dp"
                android:layout_marginHorizontal="5dp"
                android:text="@string/open24"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/work_hour_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:layout_below="@id/days_of_the_week_picker"
            android:weightSum="1"
            android:padding="10dp"
            android:layout_gravity="center_horizontal|center_vertical|center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hour_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:hint="@string/start_hour"
                android:background="@drawable/bg_button_border"
                android:padding="15dp"
                android:layout_weight="0.4"
                android:ems="10" />

            <ImageView
                android:layout_width="23dp"
                android:layout_height="41dp"
                android:layout_weight="0.1"
                android:padding="2dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_minus" />
            <TextView
                android:id="@+id/hour_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:hint="@string/end_hour"
                android:background="@drawable/bg_button_border"
                android:padding="15dp"
                android:layout_weight="0.4"
                android:ems="10" />
            <ImageButton
                android:id="@+id/btn_remove_hour"
                android:backgroundTint="@color/transparent"
                android:src="@drawable/ic_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:padding="10dp"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>
        <ImageButton
            android:id="@+id/btn_add_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/blue_light"
            android:background="@drawable/bg_rounded_border"
            android:src="@drawable/ic_plus"/>
        <LinearLayout
            android:id="@+id/work_hour_picker2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:layout_below="@id/days_of_the_week_picker"
            android:layout_gravity="center_horizontal|center_vertical|center"
            android:weightSum="1"
            android:padding="10dp"
            android:visibility="gone"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hour_start2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:hint="Start"
                android:background="@drawable/bg_button_border"
                android:padding="15dp"
                android:layout_weight="0.4"
                android:ems="10" />

            <ImageView
                android:layout_width="23dp"
                android:layout_height="41dp"
                android:layout_weight="0.1"
                android:padding="2dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_minus" />
            <TextView
                android:id="@+id/hour_end2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:hint="End"
                android:background="@drawable/bg_button_border"
                android:padding="15dp"
                android:layout_weight="0.4"
                android:ems="10" />
            <ImageButton
                android:id="@+id/btn_remove_hour2"
                android:backgroundTint="@color/transparent"
                android:src="@drawable/ic_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:padding="10dp"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_save"
            android:backgroundTint="@color/black_blue"
            android:layout_below="@id/work_hour_picker"/>
    </LinearLayout>
</RelativeLayout>