<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/white">
    <LinearLayout
        android:id="@+id/add_address_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        android:paddingHorizontal="10dp"
        android:background="@color/blue_light"
        android:weightSum="1">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_place_info_address"
            android:layout_weight="0.1"
            app:tint="@color/white" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_address_title"
            android:textColor="@color/text_light"
            android:textSize="20sp"
            android:fontFamily="@font/auttera"
            android:layout_weight="0.8"/>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_address_title"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/add_address_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="5dp"
            android:paddingVertical="15dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_address_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:textColorHint="@color/blue_dark"
                app:hintTextColor="@color/blue_light"
                app:boxStrokeColor="@color/blue_light">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_address_name_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/address_name"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/blue_dark"
                    android:background="@color/transparent"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_address_data_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:textColorHint="@color/blue_dark"
                app:hintTextColor="@color/blue_light"
                app:boxStrokeColor="@color/blue_light">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_address_data_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/address"
                    android:text="@string/select_address"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/blue_dark"
                    android:background="@color/transparent"/>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:id="@+id/address_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:weightSum="0.2">
                <ImageButton
                    android:id="@+id/btn_autocomplete_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:padding="10dp"
                    android:backgroundTint="@color/black_blue_low_opacity"
                    android:src="@drawable/ic_search"
                    />
                <ImageButton
                    android:id="@+id/btn_map_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:padding="10dp"
                    android:backgroundTint="@color/black_blue_low_opacity"
                    android:src="@drawable/ic_map_pick"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group_address_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleSelection="true"
                    app:selectionRequired="true"
                    app:checkedChip="@+id/chip_address_other">
                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_address_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.Chip.Entry"
                        app:closeIconEnabled="false"
                        android:text="@string/addressType_home"
                        app:chipIcon="@drawable/ic_address_category_home"/>
                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_address_work"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.Chip.Entry"
                        app:closeIconEnabled="false"
                        android:text="@string/addressType_work"
                        app:chipIcon="@drawable/ic_address_category_work"/>
                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_address_education"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.Chip.Entry"
                        app:closeIconEnabled="false"
                        android:text="@string/addressType_education"
                        app:chipIcon="@drawable/ic_address_category_education"/>
                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_address_other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.Chip.Entry"
                        app:closeIconEnabled="false"
                        android:text="@string/addressType_other"
                        app:chipIcon="@drawable/ic_address_category_other"/>
                </com.google.android.material.chip.ChipGroup>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_add_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black_blue"
            android:textColor="@color/text_light"
            android:text="@string/btn_addAddress"
            android:letterSpacing="0.1"
            android:textAllCaps="false"
            android:fontFamily="@font/auttera"
            android:layout_below="@+id/add_address_data"/>

    </RelativeLayout>
</RelativeLayout>